2011-04-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/Makefile.in: Use bootsys to compile .boot files.

2011-04-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/*: Make Shoe compatible.
	src/boot/typrops.boot: Use old Boot semantics for 'in'
	src/boot/compiled/typrops.clisp: Update.


2011-04-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/aggcat.spad.pamphlet: Avoid deep recursion in concat.

2011-04-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/ffcg.spad.pamphlet: Speed up FFCGP.

2011-04-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	Fix handling of FROMTO message.
	* src/interp/msg.boot: insertPos(): Fix thinko.  Handle insert at end.

2011-04-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/union.lisp: Remove (was unused after previous change).

2011-03-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/sfsfun-l.lisp: remove, move content to
	src/interp/sfsfun.boot, convert to Boot.
	src/interp/sfsfun.boot: Rename exported functions.
	src/algebra/mkfunc.spad.pamphlet,
	src/algebra/special.spad.pamphlet,
	src/algebra/sf.spad.pamphlet,
	src/algebra/gaussian.spad.pamphlet: Adjust.
	* src/interp/bits.lisp, src/interp/hash.lisp: remove,
	move content to src/interp/vmlisp.lisp.
	* src/interp/union.lisp: move content to src/interp/vmlisp.lisp.
	* src/interp/Makefile.in: Adjust
	* src/interp/sys-pkg.lisp: Drop package parts on exported
	symbols.
	* src/interp/bootfuns.lisp, src/interp/int-top.boot,
	src/interp/patches.lisp, src/interp/util.lisp,
	src/interp/g-util.boot, src/interp/g-boot.boot,
	src/interp/format.boot, src/interp/spad.lisp: Misc cleanups.


2011-03-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/fricas-lisp.lisp: Fix 'reopen' problem
	in clisp.

2011-03-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* Makefile.in: Correct typo in previous commit.

2011-03-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
